# pylibs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
smrlib/: __init__.py  google_chat_client.py  google_sheet_client.py  google_sheets_client.py  secret_core.py  structured_logger.py
tests/: __init__.py  conftest.py  test_google_chat_client.py  test_google_sheet_client.py  test_google_sheets_client.py  test_secret_core.py  test_structured_logger.py
